--- a/web/chart1.html
+++ b/web/chart1.html
@@ -1,6 +1,6 @@
 <!-- Styles -->
 <style>
-#chartdiv {
+ width: 100%;
     width   : 50%;
     height  : 500px;
 }                                                   
