--- a/web/liveRoot/gpulogs2.html
+++ b/web/liveRoot/gpulogs2.html
@@ -59,7 +59,7 @@ var chart = AmCharts.makeChart("chartdiv", {
     }, {
         "valueAxis": "v1",
         "lineColor": "#4286f4",
-        "bullet": "triangleUp",
+        "bullet": "square",
         "bulletBorderThickness": 1,
         "hideBulletsCount": 30,
         "title": "Temp GPU 1",
@@ -77,7 +77,7 @@ var chart = AmCharts.makeChart("chartdiv", {
     }, {
         "valueAxis": "v1",
         "lineColor": "#4797d1",
-        "bullet": "triangleUp",
+        "bullet": "square",
         "bulletBorderThickness": 1,
         "hideBulletsCount": 30,
         "title": "Temp GPU 3",
@@ -89,25 +89,25 @@ var chart = AmCharts.makeChart("chartdiv", {
         "bullet": "round",
         "bulletBorderThickness": 1,
         "hideBulletsCount": 30,
-        "title": "Fan 1",
+        "title": "Fan GPU 1",
         "valueField": "hits",
         "fillAlphas": 0
     }, {
         "valueAxis": "v2",
-        "lineColor": "#E0C128",
+        "lineColor": "#0000FF",
         "bullet": "round",
         "bulletBorderThickness": 1,
         "hideBulletsCount": 30,
-        "title": "Fan 2",
+        "title": "Fan GPU 2",
         "valueField": "gpu2fan",
         "fillAlphas": 0
     }, {
         "valueAxis": "v2",
-        "lineColor": "#C9880F",
+        "lineColor": "#00FFFF",
         "bullet": "round",
         "bulletBorderThickness": 1,
         "hideBulletsCount": 30,
-        "title": "Fan 3",
+        "title": "Fan GPU 3",
         "valueField": "gpu3fan",
         "fillAlphas": 0 
     }],
