--- a/web/liveRoot/gpulogs.html
+++ b/web/liveRoot/gpulogs.html
@@ -55,6 +55,7 @@ var chart = AmCharts.makeChart("chartdiv", {
         "hideBulletsCount": 30,
         "title": "HashRate",
         "valueField": "totalhashrate",
+        "enabled": false,
         "fillAlphas": 0
     }, {
         "valueAxis": "v1",
